--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Git Action Test
+name: deploy to aliyun oss
 
 on: [push]
 
@@ -8,14 +8,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # 切代码到 runner
     - uses: actions/checkout@v1
-    - name: Use Node.js 10.x
+      with:
+        submodules: true
+    # 下载 git submodule
+    - uses: srt32/git-actions@v0.0.3
+      with:
+        args: git submodule update --init --recursive
+    # 使用 node:10
+    - name: use Node.js 10.x
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
-    - name: npm install, build
+    # npm install
+    - name: npm install and build
       run: |
         npm install
-        npm run build --if-present
+        npm run build
       env:
         CI: true
+    # 设置阿里云OSS的 id/secret，存储到 github 的 secrets 中
+    - name: setup aliyun oss
+      uses: manyuanrong/setup-ossutil@master
+      with:
+        endpoint: oss-cn-beijing.aliyuncs.com
+        access-key-id: ${{ secrets.OSS_KEY_ID }}
+        access-key-secret: ${{ secrets.OSS_KEY_SECRET }}
+    - name: cp files to aliyun
+      run: ossutil cp -rf .vuepress/dist oss://shanyue-blog/
